Feature/media module updates (#199)
* Update tracking types and sample apps

* Clean up

* Update tests

* Add TealiumMedia to build.yml

* Add separate scheme for integration tests

* updated comments

Co-authored-by: christinasund <christina.sund@tealium.com>
Co-authored-by: craigrouse <craig.rouse@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           - TealiumLifecycle
           - TealiumVisitorService
           - TealiumLocation
+          - TealiumMedia
           - TealiumRemoteCommands
           - TealiumTagManagement
           - TealiumAttribution
@@ -42,6 +43,7 @@ jobs:
           - TealiumCore
           - TealiumCollect
           - TealiumLifecycle
+          - TealiumMedia
           - TealiumVisitorService
     steps:
       - uses: actions/checkout@v2
@@ -62,6 +64,7 @@ jobs:
           - TealiumCore
           - TealiumCollect
           - TealiumLifecycle
+          - TealiumMedia
           - TealiumVisitorService
     steps:
       - uses: actions/checkout@v2
